--- a/kubernetes/apps/networking/metallb/ks.yaml
+++ b/kubernetes/apps/networking/metallb/ks.yaml
@@ -15,3 +15,8 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+  postBuild:
+    substituteFrom:
+      - kind: ConfigMap
+        name: server-properties
+
