--- a/kubernetes/apps/networking/metallb/ks.yaml
+++ b/kubernetes/apps/networking/metallb/ks.yaml
@@ -15,6 +15,25 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomization_v1beta2.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-metallb-config
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-metallb
+  path: ./kubernetes/apps/networking/metallb/config
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: toot-ops
+  wait: true
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
   postBuild:
     substituteFrom:
       - kind: ConfigMap
