--- a/kubernetes/apps/default/mastodon/ks.yaml
+++ b/kubernetes/apps/default/mastodon/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: mastodon
-  namespace: default
+  namespace: flux-system
 spec:
   path: ./kubernetes/apps/default/mastodon/app
   prune: true
