--- a/kubernetes/apps/default/mastodon/ks.yaml
+++ b/kubernetes/apps/default/mastodon/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: mastodon
+  name: cluster-apps-mastodon
   namespace: flux-system
 spec:
   path: ./kubernetes/apps/default/mastodon/app
