fix(mastodon): mastodon chart is a git repository.

--- a/kubernetes/apps/default/mastodon/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mastodon/app/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       chart: mastodon
       version: 4.0.0
       sourceRef:
-        kind: HelmRepository
+        kind: GitRepository
         name: mastodon
         namespace: flux-system
   maxHistory: 3
