--- a/kubernetes/apps/default/mastodon/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mastodon/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: mastodon
+      chart: .
       version: 4.0.0
       sourceRef:
         kind: GitRepository
