--- a/kubernetes/apps/default/mastodon/app/kustomization.yaml
+++ b/kubernetes/apps/default/mastodon/app/kustomization.yaml
@@ -4,8 +4,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
+  - ./secrets.sops.yaml
   - ./helmrelease.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: mastodon
       app.kubernetes.io/instance: mastodon
+configMapGenerator:
+  - name: mastodon-values
+    files:
+      - values.yaml=mastodon-values.yaml
