--- a/kubernetes/apps/default/mastodon/app/helmrelease.yaml
+++ b/kubernetes/apps/default/mastodon/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
   uninstall:
     keepHistory: false
   valuesFrom:
-    - kind: Secret
+    - kind: ConfigMap
       name: mastodon-values-secrets
     - kind: ConfigMap
       name: mastodon-values
