--- a/kubernetes/apps/default/mastodon/app/kustomization.yaml
+++ b/kubernetes/apps/default/mastodon/app/kustomization.yaml
@@ -14,3 +14,5 @@ configMapGenerator:
   - name: mastodon-values
     files:
       - values.yaml=mastodon-values.yaml
+generatorOptions:
+  disableNameSuffixHash: true
