--- a/kubernetes/apps/default/mastodon/app/mastodon-values.yaml
+++ b/kubernetes/apps/default/mastodon/app/mastodon-values.yaml
@@ -236,6 +236,10 @@ postgresql:
   enabled: false
   postgresqlHostname: postgresql.default
   postgresqlPort: 5432
+  auth:
+    database: mastodon_production
+    username: postgres
+    existingSecret: postgresql
 
 # https://github.com/bitnami/charts/tree/master/bitnami/redis#parameters
 redis:
