--- a/kubernetes/apps/default/mastodon/app/mastodon-values.yaml
+++ b/kubernetes/apps/default/mastodon/app/mastodon-values.yaml
@@ -238,7 +238,7 @@ postgresql:
   postgresqlPort: 5432
   auth:
     database: mastodon_production
-    username: postgres
+    username: mastodon
     existingSecret: postgresql
 
 # https://github.com/bitnami/charts/tree/master/bitnami/redis#parameters
